style(merlin-www-infobar): fix height of 100px on mobile

--- a/packages/merlin-www-infobar/sass/vogue/voguebase.scss
+++ b/packages/merlin-www-infobar/sass/vogue/voguebase.scss
@@ -5,7 +5,7 @@
 }
 
 .c-infobar__content {
-    padding: 12px 20px;
+    padding: 12px 60px 12px 20px;
 }
 
 .c-infobar__message {
