--- a/packages/merlin-www-infobar/sass/wireframe/wireframe.scss
+++ b/packages/merlin-www-infobar/sass/wireframe/wireframe.scss
@@ -2,7 +2,7 @@
 @import '@cnbritain/merlin-www-common:wireframe';
 
 .c-infobar {
-    height: 120px;
+    height: 100px;
     position: relative;
     width: 100%;
     z-index: 5;
@@ -35,7 +35,7 @@
 }
 
 .c-infobar-wrapper {
-    height: 120px;
+    height: 100px;
     width: 100%;
 
     @include max-screen($X_LARGE_SIZE - 1px) {
@@ -54,7 +54,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    height: 120px;
+    height: 100px;
     justify-content: center;
     margin: 0 auto;
     max-width: $XX_LARGE_SIZE;
